Sửa 1 số chỗ để hk design hk xung đột với phần trc hiển thị string có , ở cart

--- a/MVC/Content/Style.css
+++ b/MVC/Content/Style.css
@@ -102,7 +102,7 @@ a {
 	z-index: 200;
 	overflow: hidden;
 }
-.sidebar{
+.sidebar-in-design{
 	float: right;
     position: absolute;
     right: 50px;
