--- a/MVC/Views/Design/Index.cshtml
+++ b/MVC/Views/Design/Index.cshtml
@@ -180,7 +180,7 @@
 
             </div>
         </div>
-        <div class="sidebar d-none d-lg-block">
+        <div class="sidebar-in-design d-none d-lg-block">
             <button class="btn btn-info btn-sm"> Lưu</button>
             <button class="btn btn-info btn-sm"> Xem</button>
             <button class="btn btn-info btn-sm"> Zoom</button>
