--- a/MVC/Views/Product/Detail.cshtml
+++ b/MVC/Views/Product/Detail.cshtml
@@ -45,11 +45,9 @@
                 <div class="col-lg-7 col-md-6 col-9 mx-auto">
                     <h3 class="text-success">Giới thiệu</h3>
                     <p class="h2 text-info py-3">
-                        Ốp lưng gì gì đó
-                        <br />
-                        (Loại máy)
+                        @Model.MainProduct.Name
                     </p>
-                    <p>Thiết kế: <span class="text-success">Tác giả</span></p>
+                    <p>Thiết kế: <span class="text-success">@Model.MainProduct.Author</span></p>
                     <hr />
                     <h3>Thông tin kèm theo</h3>
                     <ul>
@@ -58,16 +56,22 @@
                             <li>Infomation @i</li>
                         }
                     </ul>
-                    <a href="#">Rate here</a>
                 </div>
                 <div class="col-lg-5 col-md-6 col-9 mx-auto">
                     <h5>Thông tin thanh toán</h5>
                     <hr />
-                    <p>Giá gốc: <del>giá gốc</del></p>
-                    <p>Giá bán: <span class="h2 text-danger">giá bán</span></p>
-                    <p>Tiết kiệm: </p>
+                    @if (Model.MainProduct.PromotionPrice != Model.MainProduct.Price)
+                    {
+                        <p>Giá gốc: <del>@Model.MainProduct.Price</del></p>
+                        <p>Giá bán: <span class="h2 text-danger">@Model.MainProduct.PromotionPrice</span></p>
+                        <p>Tiết kiệm: @Model.SavePersent</p>
+                    }
+                    else
+                    {
+                        <p>Giá bán: <span class="h2 text-danger">@Model.MainProduct.Price</span></p>
+                    }
                     <hr />
-                    <a href="#" class="btn btn-info text-black btn-buy">Mua ngay</a>
+                    <a href="/Cart/AddToCart/@Model.MainProduct.ID" class="btn btn-info text-black btn-buy">Mua ngay</a>
                 </div>
             </div>
         </div>
@@ -77,7 +81,7 @@
         <div class="col-12 col-lg-8">
             <div class="row p-3 border-dark">
                 <div class="rate-point col-2 align-self-center text-warning px-0 offset-lg-1">
-                    3.6 <i class="fas fa-star"></i>
+                    @Model.Rate.RatePoint <i class="fas fa-star"></i>
                 </div>
                 <div class="col-5">
                     <ul class="navbar-nav">
@@ -85,7 +89,7 @@
                             5 <i class="fas fa-star"></i>
                             <div style="width:80%" class="float-right pt-1">
                                 <div class="progress bg">
-                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:25%"></div>
+                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:@(Model.Rate.PercentFivePoint)%"></div>
                                 </div>
                             </div>
                         </li>
@@ -93,7 +97,7 @@
                             4 <i class="fas fa-star"></i>
                             <div style="width:80%" class="float-right pt-1">
                                 <div class="progress bg">
-                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:35%"></div>
+                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:@(Model.Rate.PercentFourPoint)%"></div>
                                 </div>
                             </div>
 
@@ -102,7 +106,7 @@
                             3 <i class="fas fa-star"></i>
                             <div style="width:80%" class="float-right pt-1">
                                 <div class="progress bg">
-                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:90%"></div>
+                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:@(Model.Rate.PercentThreePoint)%"></div>
                                 </div>
                             </div>
 
@@ -111,7 +115,7 @@
                             2 <i class="fas fa-star"></i>
                             <div style="width:80%" class="float-right pt-1">
                                 <div class="progress bg">
-                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:10%"></div>
+                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:@(Model.Rate.PercentTwoPoint)%"></div>
                                 </div>
                             </div>
 
@@ -120,7 +124,7 @@
                             1 <i class="fas fa-star"></i>
                             <div style="width:80%" class="float-right pt-1">
                                 <div class="progress bg">
-                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+                                    <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:@(Model.Rate.PercentOnePoint)%"></div>
                                 </div>
                             </div>
 
